<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/ABListRow"
    android:weightSum="5">

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="4"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

       <LinearLayout
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:text="@string/label_name"
               style="@style/ABRowLabel"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />

           <TextView
               android:id="@+id/txt_name"
               android:text="@string/app_name"
               style="@style/ABRowData"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />

       </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/label_price"
                style="@style/ABRowLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_price"
                android:text="@string/app_name"
                style="@style/ABRowData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/label_quantity"
                style="@style/ABRowLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_quantity"
                android:text="@string/app_name"
                style="@style/ABRowData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_sale"
        android:text="@string/label_sold"
        style="@style/ABSoldButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

</LinearLayout>